---------------------------------------------------------------------------------------------------
Version: 1.0.0
  Changes:
    - Update to factorio version 1.0.
    - Reset and restart from the ground up due to major changes in just about every mod pycoaltbaa was setup to deal with.
---------------------------------------------------------------------------------------------------
Version: 0.9.10
  Changes:
    - first update to .18
---------------------------------------------------------------------------------------------------
Version: 0.9.9
  Changes:
    - fix an issue where pyro wasnt correctly overriding bob ores
---------------------------------------------------------------------------------------------------
Version: 0.9.8
  Changes:
    - added setting to disable the extra tiers of bob power stuff
    - fixed error when missing pyfusion and loading angel mods
---------------------------------------------------------------------------------------------------
Version: 0.9.7
  Changes:
    - Fixed issues with abpz that you needed titanium and sodium hydoxide to make sci 2 mats and need sci 2 to unlock their recipes
---------------------------------------------------------------------------------------------------
Version: 0.9.6
  Changes:
    - Fixed that momotweaks was adding basic circuit boards to several recipes after they had been replaced with pyht pcb1
---------------------------------------------------------------------------------------------------
Version: 0.9.5
  Changes:
    - Fixed errors cuased by me fixing errors with omni
    - fixed error missing tech prerequisite with aai industry when pyro isnt enabled
---------------------------------------------------------------------------------------------------
Version: 0.9.4
  Changes:
    - Fixed errors with omni, py and aai zones
---------------------------------------------------------------------------------------------------
Version: 0.9.3
  Changes: