@@ -1,11 +1,0 @@
-
-FORMAT RECIPE INGREDIENTS AND RESULTS TO ALL BE RESULTS BEFORE PROCESSING
-
-
-angels refining
-
-currently ore1 goes from crushed smelted at 666 iron plate to 5600 iron plate at lvl 4 from 1000 ore1
-	might be a bit high. need to compare with angels vanilla setup
-	
-	
-angels-mods tech needs formatted to use libary tech instead of data.raw
