@@ -1,15 +1,0 @@
-{
-"item":
-	[
-		["bauxite-ore","ore-aluminium"],
-		["tin-ore","ore-tin"],
-		["lead-ore","ore-lead"],
-		["nickel-ore","ore-nickel"],
-		["zinc-ore","ore-zinc"],
-		["valve","valvea"]
-	],
-"recipe":
-	[
-		["valve","valvea"]
-	]
-}
